@@ -4,12 +4,14 @@ sharedFactory = true
 
 dnssdFactory.comment = aliases should not contain dot characters
 dnssdFactory.key = dnssdFactory
+
 dnssdFactory.1 = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
 dnssdFactory.mdns = fr.prima.omiscid.dnssd.mdns.DNSSDFactoryMdns
 dnssdFactory.2 = fr.prima.omiscid.dnssd.jmdns.DNSSDFactoryJmdns
 dnssdFactory.jmdns = fr.prima.omiscid.dnssd.jmdns.DNSSDFactoryJmdns
 dnssdFactory.3 = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
 dnssdFactory.omiscid = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
+dnssdFactory.client = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
 dnssdFactory.4 = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
 dnssdFactory.avahi = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
 dnssdFactory.4.comment = not 100% operationnal, when using avahi, the running user must be kind of allowed to access the avahi dbus. It seems to happen by being in a specific user group (plugdev?) or not (don't know really what is the cause)
